# GraffikalBots

./: .gitignore  CMakeLists.txt  README.md  bot.mtl  bot_turret.mtl  bullet.mtl  flake.nix  tmpbuild.sh
src/: main.c  main.h  scan_arc.c  scan_arc.h
